# vtr_testing_radar

./: README.md  docker_installation.md  local_installation.md  run_experiments_on_obelisk.md
helper_scripts/: aeva_calibration.py  boreas_player.py  boreas_player_aeva.py  estimate_vehicle_frame.ipynb  plot_ground_truth.py  plot_loc_error_time.py  plot_loc_error_time_colored.py  plot_odometry.py  plot_path_tracking_error.py  rv_error.ipynb  velodyne_calibration.py
localization_results/: plot_histogram.py
localization_results/lidar-lidar/: boreas-2020-12-04-14-00-err.txt  boreas-2021-01-26-10-59-err.txt  boreas-2021-02-09-12-55-err.txt  boreas-2021-03-09-14-23-err.txt  boreas-2021-06-29-18-53-err.txt  boreas-2021-09-08-21-00-err.txt
localization_results/radar-lidar/: boreas-2020-12-04-14-00-err.txt  boreas-2021-01-26-10-59-err.txt  boreas-2021-02-09-12-55-err.txt
localization_results/radar-radar/: boreas-2021-09-08-21-00-err.txt
plot_alignment/: 1631021785432729000_map_radar_radar.txt  1631021785432729000_scan_radar_radar.txt  1631149285501197000_map_radar_lidar.txt  1631149285501197000_map_radar_radar.txt  1631149285501197000_scan_radar_lidar.txt  1631149285501197000_scan_radar_radar.txt  README.md  plot.py
plot_histogram/: README.md  plot_error_vs_time.py  plot_histogram.py
plot_histogram/lidar-lidar/: boreas-2020-12-04-14-00-err.txt  boreas-2020-12-04-14-00.txt  boreas-2021-01-26-10-59-err.txt  boreas-2021-01-26-10-59.txt  boreas-2021-02-09-12-55-err.txt  boreas-2021-02-09-12-55.txt  boreas-2021-03-09-14-23-err.txt  boreas-2021-03-09-14-23.txt  boreas-2021-06-29-18-53-err.txt  boreas-2021-06-29-18-53.txt  boreas-2021-09-08-21-00-err.txt  boreas-2021-09-08-21-00.txt  boreas-2021-10-05-15-35-err.txt  boreas-2021-10-05-15-35.txt  boreas-2021-10-26-12-35-err.txt  boreas-2021-10-26-12-35.txt  boreas-2021-11-06-18-55-err.txt  boreas-2021-11-06-18-55.txt  boreas-2021-11-28-09-18-err.txt  boreas-2021-11-28-09-18.txt
plot_histogram/radar-lidar/: boreas-2020-12-04-14-00-err.txt  boreas-2020-12-04-14-00.txt  boreas-2021-01-26-10-59-err.txt  boreas-2021-01-26-10-59.txt  boreas-2021-02-09-12-55-err.txt  boreas-2021-02-09-12-55.txt  boreas-2021-03-09-14-23-err.txt  boreas-2021-03-09-14-23.txt  boreas-2021-06-29-18-53-err.txt  boreas-2021-06-29-18-53.txt  boreas-2021-09-08-21-00-err.txt  boreas-2021-09-08-21-00.txt  boreas-2021-10-05-15-35-err.txt  boreas-2021-10-05-15-35.txt  boreas-2021-10-26-12-35-err.txt  boreas-2021-10-26-12-35.txt  boreas-2021-11-06-18-55-err.txt  boreas-2021-11-06-18-55.txt  boreas-2021-11-28-09-18-err.txt  boreas-2021-11-28-09-18.txt  timestamps.txt
plot_histogram/radar-radar/: boreas-2020-12-04-14-00-err.txt  boreas-2020-12-04-14-00.txt  boreas-2021-01-26-10-59-err.txt  boreas-2021-01-26-10-59.txt  boreas-2021-02-09-12-55-err.txt  boreas-2021-02-09-12-55.txt  boreas-2021-03-09-14-23-err.txt  boreas-2021-03-09-14-23.txt  boreas-2021-06-29-18-53-err.txt  boreas-2021-06-29-18-53.txt  boreas-2021-09-08-21-00-err.txt  boreas-2021-09-08-21-00.txt  boreas-2021-10-05-15-35-err.txt  boreas-2021-10-05-15-35.txt  boreas-2021-10-26-12-35-err.txt  boreas-2021-10-26-12-35.txt  boreas-2021-11-06-18-55-err.txt  boreas-2021-11-06-18-55.txt  boreas-2021-11-28-09-18-err.txt  boreas-2021-11-28-09-18.txt
plot_histogram/results_old/lidar-lidar/: boreas-2020-12-04-14-00-err.txt  boreas-2021-03-09-14-23-err.txt  boreas-2021-06-29-18-53-err.txt  timestamps.txt
plot_histogram/results_old/radar-lidar/: boreas-2020-12-04-14-00-err.txt  (+2 more)
plot_pointcloud/: plot.py
plot_snow/: snow.py
src/vtr_testing_aeva/: CMakeLists.txt  package.xml
src/vtr_testing_aeva/config/: aeva.yaml  aeva_boreas.yaml  aeva_boreas_dataset_config.yaml  aeva_hq.yaml  aeva_hq_dataset_config.yaml
src/vtr_testing_aeva/include/vtr_testing_aeva/: utils.hpp
src/vtr_testing_aeva/script/: aevahq_generate_localization_result.py  boreas_generate_localization_result.py  boreas_generate_odometry_result.py  boreas_testing.sh  test_localization.sh  test_localization_eval.sh  test_odometry.sh  test_odometry_eval.sh  test_preprocessing.sh
src/vtr_testing_aeva/src/: aeva_boreas_localization.cpp  aeva_boreas_odometry.cpp  aeva_hq_localization.cpp  aeva_hq_odometry.cpp  aeva_localization.cpp  aeva_odometry.cpp  aeva_preprocessing.cpp
src/vtr_testing_lidar/: CMakeLists.txt  package.xml
src/vtr_testing_lidar/config/: boreas.yaml
src/vtr_testing_lidar/script/: boreas_generate_localization_result.py  boreas_generate_odometry_result.py  boreas_testing.sh  correct_poses_enu.py  get_sensor_poses.py  get_velocities_from_log.py  parallel_test_localization.sh  parallel_test_odometry.sh  plot_sequence_comparisons.py  test_localization.sh  test_localization_eval.sh  test_odometry.sh  test_odometry_eval.sh  test_preprocessing.sh
src/vtr_testing_lidar/src/: boreas_localization.cpp  boreas_odometry.cpp  boreas_preprocessing.cpp
src/vtr_testing_radar/: CMakeLists.txt  installation.md  package.xml
src/vtr_testing_radar/config/: boreas.yaml  boreas_new_radar.yaml
src/vtr_testing_radar/script/: boreas_generate_localization_result.py  boreas_generate_odometry_result.py  boreas_player.py  boreas_testing.sh  installation.sh  parallel_test_localization.sh  parallel_test_odometry.sh  test_localization.sh  test_localization_eval.sh  test_odometry.sh  test_odometry_eval.sh  test_preprocessing.sh
src/vtr_testing_radar/src/: boreas_localization.cpp  boreas_odometry.cpp  boreas_preprocessing.cpp
src/vtr_testing_radar_lidar/: CMakeLists.txt  package.xml
src/vtr_testing_radar_lidar/config/: boreas.yaml  boreas_new_radar.yaml
src/vtr_testing_radar_lidar/include/vtr_testing_radar_lidar/: utils.hpp
src/vtr_testing_radar_lidar/script/: boreas_generate_localization_result.py  boreas_generate_odometry_result.py  boreas_testing.sh  parallel_test_localization.sh  parallel_test_odometry.sh  test_localization.sh  test_localization_eval.sh  test_odometry.sh  test_odometry_eval.sh  test_preprocessing.sh
src/vtr_testing_radar_lidar/src/: boreas_localization.cpp  boreas_odometry.cpp  boreas_preprocessing.cpp
(+1 files in other folders)
